--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-dom": "18"
   },
   "devDependencies": {
+    "clsx": "^2.1.1",
     "eslint": "8",
     "eslint-config-next": "14.2.3",
+    "framer-motion": "^11.2.6",
     "postcss": "8",
-    "tailwindcss": "3.4.1"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3"
   }
 }
