--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^5.17.3",
     "next": "14.2.3",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "clsx": "^2.1.1",
