--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "antd": "^5.17.3",
+    "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "18",
     "react-dom": "18",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "clsx": "^2.1.1",
