--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "antd": "^5.17.3",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.475.0",
+    "motion": "^12.4.3",
     "next": "^14.2.15",
     "react": "18",
     "react-dom": "18",
     "react-spinners": "^0.13.8",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "clsx": "^2.1.1",
@@ -24,7 +28,7 @@
     "eslint-config-next": "14.2.3",
     "framer-motion": "^11.2.6",
     "postcss": "8",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.3"
   }
 }
